--- a/apex-mocks/main/default/classes/ApexMocks_TEST.cls
+++ b/apex-mocks/main/default/classes/ApexMocks_TEST.cls
@@ -1,7 +1,7 @@
 /**
  * Test class for ApexMocks
  *
- * @author Bartosz Sliwinski (bsliwinski@deloittece.com)
+ * @author Bartosz Sliwinski (bartosz.j.sliwinski@gmail.com)
  * @date September 2022
  */
 @IsTest(IsParallel=true)
