--- a/apex-mocks/main/default/classes/ApexMocks_TestServiceClass.cls
+++ b/apex-mocks/main/default/classes/ApexMocks_TestServiceClass.cls
@@ -1,7 +1,7 @@
 /**
  * Service class to test ApexMocks
  *
- * @author Bartosz Sliwinski (bsliwinski@deloittece.com)
+ * @author Bartosz Sliwinski (bartosz.j.sliwinski@gmail.com)
  * @date September 2022
  */
 @IsTest
